feat: experiment with api building and interaction; make document and title endpoints
